# algorithm-visualizer

./: README.md  package-lock.json  package.json  snowpack.config.mjs  tailwind.config.js
algos-ds-wasm/: Cargo.toml  LICENSE_MIT
algos-ds-wasm/src/: canvas.rs  lib.rs  sorting.rs  utils.rs
public/: index.css  index.html  tailwind.css
src/: App.svelte
